minor design tweaks

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,25 +6,52 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #0080a3;
+  --ifm-color-primary-dark: #007393;
+  --ifm-color-primary-darker: #006d8b;
+  --ifm-color-primary-darkest: #005a72;
+  --ifm-color-primary-light: #008db3;
+  --ifm-color-primary-lighter: #0093bb;
+  --ifm-color-primary-lightest: #00a6d4;
+
+
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #00c8ff;
+  --ifm-color-primary-dark: #00b4e6;
+  --ifm-color-primary-darker: #00aad9;
+  --ifm-color-primary-darkest: #008cb3;
+  --ifm-color-primary-light: #1acdff;
+  --ifm-color-primary-lighter: #26d0ff;
+  --ifm-color-primary-lightest: #4dd8ff;
+
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+:root {
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+}
+
+[data-theme='dark'] {
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.navbar__link--active:after {
+  --navbar-border-overflow: 5px;
+  content: "";
+  display: flex;
+  width: calc(100% + var(--navbar-border-overflow) * 2);
+  height: 4px;
+  margin-top: -4px;
+  margin-left: calc(var(--navbar-border-overflow) * -1);
+  margin-right: calc(var(--navbar-border-overflow) * -1);
+  position: relative;
+  top: 18px;
+  background: var(--ifm-color-primary);
 }
