--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -42,6 +42,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+html.plugin-blog h2 {
+  font-size: 2rem;
+}
+html.plugin-blog.blog-post-page h1 {
+  font-size: 2rem;
+}
+
+
 .navbar__link--active:after {
   --navbar-border-overflow: 5px;
   content: "";
