--- a/website/src/pages/_homepage/quotes.module.css
+++ b/website/src/pages/_homepage/quotes.module.css
@@ -19,3 +19,10 @@
   flex-shrink: 0;
   margin: 1rem 2rem;
 }
+
+.quoteContainer blockquote {
+  min-height: 3.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
