--- a/website/src/pages/_homepage/quotes.module.css
+++ b/website/src/pages/_homepage/quotes.module.css
@@ -13,11 +13,17 @@
 }
 
 .quoteContainer {
-  max-width: 500px;
+  max-width: 550px;
   flex-basis: 450px;
   flex-grow: 1;
-  flex-shrink: 0;
+  flex-shrink: 1;
   margin: 1rem 2rem;
+}
+
+@media screen and (max-width: 700px) {
+  .quoteContainer {
+    margin: 1rem 0;
+  }
 }
 
 .quoteContainer blockquote {
