--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,7 +6,13 @@
 
 :root {
   --twir-dark: #282c34;
-  --twir-deepdark: #20232a;
+}
+
+:root {
+  --ifm-global-shadow-lw: 0 1px 2px 0 rgba(0,0,0,.1);
+  --ifm-global-shadow-md: 0 2px 4px 0 rgba(0,0,0,.14);
+  --ifm-global-shadow-tl: 0 3px 6px 0 rgba(0,0,0,.18);
+  --ifm-global-shadow-xl: 0 4px 8px 0 rgba(0,0,0,.22);
 }
 
 :root {
