--- a/website/src/theme/MDXComponents/SponsoringTabs/index.module.css
+++ b/website/src/theme/MDXComponents/SponsoringTabs/index.module.css
@@ -14,4 +14,14 @@ html[data-theme="dark"] .tabs {
   min-width: 6rem;
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 996px) {
+  .tab {
+    font-size: 1rem;
+    min-width: 4rem;
+
+  }
 }
