--- a/website/src/pages/_homepage/hero.module.css
+++ b/website/src/pages/_homepage/hero.module.css
@@ -35,10 +35,13 @@
   margin-bottom: 0;
 }
 
+/*
+Not easy to center this CK form properly...
+*/
 .heroSubscribeForm {
   margin: 0 auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  width: 95vw;
+  max-width: 700px; /* TODO reduce this width without CK stacking the form... (JS sets data-stacked="true")*/
 }
 
 @media screen and (max-width: 996px) {
@@ -53,10 +56,5 @@
   }
   .hero p {
     font-size: 1.2rem;
-  }
-
-  .heroSubscribeForm {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
   }
 }
