--- a/website/src/components/AdExamples/index.module.css
+++ b/website/src/components/AdExamples/index.module.css
@@ -1,24 +1,16 @@
 .adExampleWindow img {
   flex: 0;
-  max-width: 120px;
+  width: 100%;
   margin-right: 1rem;
 }
 
-
-
 @media screen and (max-width: 996px) {
-  .adExampleWindow img {
-    max-width: 20vw;
-  }
   .adExampleWindow h2 {
     font-size: 1.4rem;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .adExampleWindow img {
-    max-width: 15vw;
-  }
   .adExampleWindow h2 {
     font-size: 1rem;
   }
